# tsdistances_gpu

./: Cargo.toml  rust-toolchain.toml
benches/: benchmark.rs
src/: kernels.rs  lib.rs  timing.rs  utils.rs  warps.rs
tests/: correctness_tests.rs  cpu_reference.rs  test_distances.rs
