[package]
name = "tsdistances_gpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", default-features = false }

[dev-dependencies]
csv = "1.3.1"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 16
strip = true


[target.'cfg(not(target_arch = "spirv"))'.dependencies]
vulkano = { version = "0.35.1" }
dashmap = "6.1.0"
rspirv = "0.12.0"

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = {  git = "https://github.com/Rust-GPU/rust-gpu.git", default-features = false }

[features]
default = ["use-compiled-tools"]
use-compiled-tools = [
    "spirv-builder/use-compiled-tools",
]
use-installed-tools = [
    "spirv-builder/use-installed-tools",
]
